--- a/sankey/index.html
+++ b/sankey/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>d3.chart.sankey (product demo)</title>
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="//cdn.rawgit.com/newrelic-forks/d3-plugins-sankey/master/sankey.js"></script>
+    <script src="//cdn.rawgit.com/misoproject/d3.chart/master/d3.chart.min.js"></script>
+    <script src="//cdn.rawgit.com/q-m/d3.chart.sankey/master/d3.chart.sankey.min.js"></script>
+    
+<!--
     <script src="/js/d3.v3.js"></script>
     <script src="/js/sankey.js"></script>
     <script src="//cdn.rawgit.com/misoproject/d3.chart/master/d3.chart.min.js"></script>
     <script src="/js/d3.chart.sankey.js"></script>
+-->
     <style>
       body {
         padding: 10px;
